Switch for four day

--- a/03-dynamic.html
+++ b/03-dynamic.html
@@ -228,7 +228,7 @@ the code chunk, add <code>\</code>r bio` `</p>
 
 <h2>[1] Xie et al was published online in July 2018 at <a href="https://bookdown.org/yihui/rmarkdown/">https://bookdown.org/yihui/rmarkdown/</a></h2>
 
-<p>Previous: <a href="00-getting-started.html">Getting Started with Markdown</a> Next: <a href="05-publishing.html">Publishing</a></p>
+<p>Previous: <a href="02-markdown.html">Getting Started with Markdown</a> Next: <a href="04-publishing.html">Publishing</a></p>
 
 </section>
 
