Update for four day

--- a/index.html
+++ b/index.html
@@ -12,19 +12,18 @@
 <ul>
 <li><a href=".">Lesson</a></li>
 <li><a href="01-getting-started.html">Day 1: Getting Started</a></li>
-<li><a href="02-markdown.html">Day 2: Intro to Markdown</a></li>
-<li><a href="03-modifying-appearance.html">Day 3: Document Appearance</a></li>
-<li><a href="04-dynamic.html">Day 4: Dynamic Documents</a></li>
-<li><a href="05-publishing.html">Day 5: Publishing</a></li>
+<li><a href="02-markdown.html">Day 2: Intro to Markdown/Document Appearance</a></li>
+<li><a href="03-dynamic.html">Day 3: Dynamic Documents</a></li>
+<li><a href="04-publishing.html">Day 4: Publishing</a></li>
 <li><a href="mailto:authorcarpentry@library.caltech.edu">Contact Us</a></li>
 </ul>
 
 </nav>
 
 <section>
-<h1>Author Carpentry at FSCI 2018: Reproducible Research Reporting and Dynamic Documents with Open Authoring Tools: Toward the Paper of the Future</h1>
+<h1>Author Carpentry at FSCI 2019: Reproducible Research Reporting and Dynamic Documents with Open Authoring Tools: Toward the Paper of the Future</h1>
 
-<p><em>Instructors: Gail Clement, Tom Morrell</em></p>
+<p><em>Instructors: Tom Morrell, Donna Wrublewski</em></p>
 
 <p><strong>Lesson status: In Development</strong></p>
 
