--- a/01-getting-started.html
+++ b/01-getting-started.html
@@ -12,10 +12,9 @@
 <ul>
 <li><a href=".">Lesson</a></li>
 <li><a href="01-getting-started.html">Day 1: Getting Started</a></li>
-<li><a href="02-markdown.html">Day 2: Intro to Markdown</a></li>
-<li><a href="03-modifying-appearance.html">Day 3: Document Appearance</a></li>
-<li><a href="04-dynamic.html">Day 4: Dynamic Documents</a></li>
-<li><a href="05-publishing.html">Day 5: Publishing</a></li>
+<li><a href="02-markdown.html">Day 2: Intro to Markdown/Document Appearance</a></li>
+<li><a href="03-dynamic.html">Day 3: Dynamic Documents</a></li>
+<li><a href="04-publishing.html">Day 4: Publishing</a></li>
 <li><a href="mailto:authorcarpentry@library.caltech.edu">Contact Us</a></li>
 </ul>
 
@@ -127,7 +126,7 @@ with a new folder called <code>FSCI-2018-files</code>.</li>
 
 <h2>Intro to RStudio and knitting documents</h2>
 
-<p>Now open Rstudio (Applications/Rstudio).  Rstudio is the development
+<p>Now open RStudio (Applications/Rstudio).  RStudio is the development
 environment where we&rsquo;ll be working on our document.  The main panel you&rsquo;ll see
 on the left is the Console, where you can run R code.  On the right is two
 panels - the upper contains your environment (what R can access), and the lower
@@ -148,8 +147,8 @@ we&rsquo;ll need the following packages:</p>
 
 <p>Now let&rsquo;s actually work with a document.  Click in the Files tab in the lower
 right panel.  The file view in RStudio is just like
-navigating in finder or windows explorer.  Let&rsquo;s find the <code>FSCI-2018-files</code>
-folder we downloaded above.  Go to Desktop and <code>FSCI-2018-files</code>.  You&rsquo;ll see
+navigating in finder or windows explorer.  Let&rsquo;s find the <code>FSCI-2019-files</code>
+folder we downloaded above.  Go to Desktop and <code>FSCI-2019-files</code>. You&rsquo;ll see
 lots of files we&rsquo;ll use during the workshop.  Double click on
 <code>Base_2013_day1_in.Rmd</code>.</p>
 
@@ -159,21 +158,21 @@ here.  For now, just change the name in the document to your name.</p>
 
 <p>Knitting is a process in Rstudio that takes a text document and turns it into
 an output (like html, docx, or html slides).  Now click the knit button in the upper
-left hand corner of the editor.    The first
-time you do this you&rsquo;ll get a message that you need to install some packages.
-You&rsquo;ll want to click Yes and wait for the packages to install.  Once the
-installation you&rsquo;ll see an interactive demonstration document!</p>
+left hand corner of the editor. The first time you do this you&rsquo;ll get a message
+that you need to install some packages. Click Yes and wait for the packages to
+install. Once the installation finishes, you will see an interactive demonstration
+document!</p>
 
-<p>You can output this single file in multiple formats.  By default we&rsquo;ve been
-generating .html files, but we can also output to a word document.  If you
+<p>You can output this single file in multiple formats. By default we&rsquo;ve been
+generating .html files, but we can also output to a Word document. If you
 click on the downward arrow next to the knit button we see some default
-formats.  Click on Word, and a word document will appear.</p>
+formats. Click on Word, and a word document will appear.</p>
 
 <p>While pdf is an option, this requires a TeX distribution which is complex to
 install and beyond the scope of  this course.</p>
 
 <p>You can also select other output forms that aren&rsquo;t listed in the <code>knitr</code>
-dropdown.  Take a look at the document.  You&rsquo;ll see in the top a section called
+dropdown. Take a look at the document. You&rsquo;ll see in the top a section called
 <code>output</code> with sections under it like <code>html_document</code>.  If we change the top
 output knit will produce a different result.  Try replacing <code>word_document</code>
 with <code>slidy_presentation</code>.  This is a html presentation that you can use in
