--- a/03-dynamic.html
+++ b/03-dynamic.html
@@ -48,17 +48,17 @@
 <p>Up to now, you have manually entered three dates referenced in this document. Let&rsquo;s replace them with dynamically generated dates that will auto-update by the computer!</p>
 
 <ol>
-<li>Open the file <code>insert_4a_dates.R</code><br /></li>
-<li>Copy the code into the 3 different sections of the exercise file, as directed in the comments included in<code>insert_4a_dates.R</code><br /></li>
-<li>Close the file <code>insert_4a_dates.R</code></li>
+<li>Open the file <code>insert_dates.R</code><br /></li>
+<li>Copy the code into the 3 different sections of the exercise file, as directed in the comments included in <code>insert_dates.R</code><br /></li>
+<li>Close the file <code>insert_dates.R</code></li>
 </ol>
 
 <p>Another section of the exercise file that can be populated by the computer is the number of journals in the <em>DOAJ Seal</em> data set. Let&rsquo;s replace manually-composed text with computer code!</p>
 
 <ol>
-<li>Open the file <code>insert_4a_jnls.txt</code></li>
+<li>Open the file <code>insert_jnls.txt</code></li>
 <li>Copy the code into the <strong>Data being collected</strong> section of the exercise file, making it the first sentence.</li>
-<li>Close the file <code>insert_4a_jnls.txt</code></li>
+<li>Close the file <code>insert_jnls.txt</code></li>
 </ol>
 
 <p>Save the changes to the exercise file and knit to HTML and Word. Can you find the dynamically-generated inline text now? When was your document originally created and how many journals have the DOAJ Seal?</p>
@@ -110,7 +110,7 @@
 <p>To accomplish this enhancement, we need to copy a code chunk that formats the underlying data set using the <code>Datatable (DT)</code> package. [@R-DT].  This package is one of the <a href="https://www.htmlwidgets.org/">HTML Widgets</a> that enable JavaScript libraries to create dynamic content in Rmarkdown documents. <code>DT</code> tables and other HTML Widgets are not covered in this course. However we can insert a pre-built data table in our reproducible report to illustrate the power of interactive features !</p>
 
 <ol>
-<li><p>Open the R script <code>insert_4b_DTtable.R</code> and copy all of the code with your mouse. Close the file.</p></li>
+<li><p>Open the R script <code>insert_DTtable.R</code> and copy all of the code with your mouse. Close the file.</p></li>
 
 <li><p>In the exercise file, scroll down to the Level One heading <strong>Annexes</strong> and paste in the code chunk. Save the change and knit the document to HTML to see the dynamic data table generated in your report.</p></li>
 
@@ -118,11 +118,11 @@
 </ol>
 
 <ul>
-<li><p>Open the file <code>insert_4b_table.txt</code> and copy the first line of text (marked with a Level 2 header). Keep this file open because we will return to it to copy the second paragraph of text shortly&hellip;</p></li>
+<li><p>Open the file <code>insert_table.txt</code> and copy the first line of text (marked with a Level 2 header). Keep this file open because we will return to it to copy the second paragraph of text shortly&hellip;</p></li>
 
 <li><p>In the exercise file, paste the copied text under the heading <strong>Annexes</strong> and above the data-table code chunk.</p></li>
 
-<li><p>Back in the file <code>insert_4b_table.txt</code>, copy the second paragraph of text starting with &ldquo;The complete data set&hellip;&rdquo;</p></li>
+<li><p>Back in the file <code>insert_table.txt</code>, copy the second paragraph of text starting with &ldquo;The complete data set&hellip;&rdquo;</p></li>
 
 <li><p>In the exercise file, scroll up to the section <strong>Existing Data Being Reused</strong> where the table <strong>A Table of the first 4 rows of the DOAJ Seal data</strong> is displayed. Immediately after the text sentence &ldquo;A sample of the <code>doaj_seal.csv</code> data set is shown below&rdquo;, paste in the copied text. You should now have the following paragraph located above the static table.</p></li>
 </ul>
@@ -154,7 +154,7 @@
 <p>Let&rsquo;s parameterize our exercise file to demonstrate the power of this dynamic reporting feature!  We&rsquo;ll apply this feature to enable the author to select her/his Institution before knitting.  &lsquo;a parameter&rsquo;Institution&rsquo; appears six times in the exercise file.  We will need to add some new code to the YAML header as well as to several paragraphs where the Institution has been manually entered.</p>
 
 <ol>
-<li><p>Open the file <code>insert_4b_params.txt</code> and copy all of the code. Close the file.</p></li>
+<li><p>Open the file <code>insert_params.txt</code> and copy all of the code. Close the file.</p></li>
 
 <li><p>In the YAML header of the exercise file ( at the bottom, before the three ending dashes), paste in the copied code <code>r params$institution</code>. If you wish to change the names of any of the Institutions listed, feel free to do so. Just make sure there are at least four Institutions included in the list. Save the changes.</p></li>
 
@@ -183,7 +183,7 @@
 <li><p>This step creates an .R environment file in your computer&rsquo;s home directory where you will store the ORCID <code>token</code>. By doing so, the authorization is able to be reactivated every time your RStudio session communicates with ORCID to refresh or add data from your profile.</p></li>
 </ol>
 
-<p>Return to the file <code>insert_4b_orcid.R</code>. Now copy and paste the second code chunk into the console (NOT into your exercise file!):</p>
+<p>Return to the file <code>insert_orcid.R</code>. Now copy and paste the second code chunk into the console (NOT into your exercise file!):</p>
 
 <ol>
 <li>A new text file now opens in Rstudio.  In this file type:</li>
