--- a/index.html
+++ b/index.html
@@ -43,9 +43,8 @@
 <ol>
 <li><a href="01-getting-started.html">Day 1: Introduction</a></li>
 <li><a href="02-markdown.html">Day 2: Basic Markdown</a></li>
-<li><a href="03-modifying-appearance.html">Day 3: Document Appearance</a></li>
-<li><a href="04-dynamic.html">Day 4: Dynamic Documents</a></li>
-<li><a href="05-publishing.html">Day 5: Publishing</a></li>
+<li><a href="03-dynamic.html">Day 3: Dynamic Documents</a></li>
+<li><a href="04-publishing.html">Day 4: Publishing</a></li>
 </ol>
 
 <h2>Requirements</h2>
@@ -55,7 +54,7 @@ their own computers to insure the proper setup of tools for an efficient
 workflow.
 <em>These lessons assume no prior knowledge of the skills or tools</em>, but working
 through this lesson requires working copies of R and Rstudio.
-We&rsquo;ll work through software installation during the first day.</p>
+We&rsquo;ll work through any software installation problems during the first day.</p>
 
 </section>
 
