--- a/01-getting-started.html
+++ b/01-getting-started.html
@@ -75,6 +75,20 @@
 
 <p>Source: Rallison, S.P., &lsquo;What are Journals For?&rsquo;, <em>Ann R Coll Surg Engl.</em> 2015 Mar; 97(2): 89-91. DOI: 10.1308/003588414X14055925061397</p>
 
+<h2>What are some examples of reproducible reports</h2>
+
+<ol>
+<li>Hu, Y. et. al. Late Middle Pleistocene Levallois stone-tool technology in
+southwest China <em>Nature</em> 565, 82-85 (2019) DOI
+<a href="https://doi.org/10.1038/s41586-018-0710-1">10.1038/s41586-018-0710-1</a></li>
+<li>Boettiger, C. From noise to knowledge: how randomness generates novel
+phenomena and reveals information <em>Ecology Letters</em> 21, 1255-1267 (2018) DOI
+<a href="https://doi.org/10.1111/ele.13085">10.111/ele.13085</a></li>
+<li>Lewis, L. M. et. al. Replication Study: Transcriptional amplification in tumor cells with
+elevated c-Myc <em>eLife</em> 2018; 7:e30274 DOI
+<a href="https://doi.org/10.7554/eLife.30274">10.7554/eLife.30274</a></li>
+</ol>
+
 <h2>How can authors fulfill these requirements while making their research reports more Findable, Accessible, Interoperable, and Re-Useable/Reproducible?</h2>
 
 <p>Now we&rsquo;ll show you the final result (on our machine).</p>
@@ -118,10 +132,10 @@ IDE</a>.</p>
 <p>You also need to download some files for this workshop:</p>
 
 <ol>
-<li>Download <a href="/FSCI-2018/data/FSCI-2018-files.zip">this zip file</a> and move
+<li>Download <a href="/FSCI-2019/data/FSCI-2019-files.zip">this zip file</a> and move
 the file to your desktop.</li>
 <li>If it&rsquo;s not unzipped yet, double-click on it to unzip it. You should end up
-with a new folder called <code>FSCI-2018-files</code>.</li>
+with a new folder called <code>FSCI-2019-files</code>.</li>
 </ol>
 
 <h2>Intro to RStudio and knitting documents</h2>
@@ -169,7 +183,7 @@ click on the downward arrow next to the knit button we see some default
 formats. Click on Word, and a word document will appear.</p>
 
 <p>While pdf is an option, this requires a TeX distribution which is complex to
-install and beyond the scope of  this course.</p>
+install and beyond the scope of this course.</p>
 
 <p>You can also select other output forms that aren&rsquo;t listed in the <code>knitr</code>
 dropdown. Take a look at the document. You&rsquo;ll see in the top a section called
@@ -178,7 +192,7 @@ output knit will produce a different result.  Try replacing <code>word_document<
 with <code>slidy_presentation</code>.  This is a html presentation that you can use in
 any web browser.</p>
 
-<p>Tomorrow we&rsquo;ll start working with an actual research report !</p>
+<p>Tomorrow we&rsquo;ll start working with an actual research report!</p>
 
 <p>Next: <a href="02-markdown.html">Basic Markdown</a></p>
 
