--- a/01-getting-started.html
+++ b/01-getting-started.html
@@ -75,7 +75,7 @@
 
 <p>Source: Rallison, S.P., &lsquo;What are Journals For?&rsquo;, <em>Ann R Coll Surg Engl.</em> 2015 Mar; 97(2): 89-91. DOI: 10.1308/003588414X14055925061397</p>
 
-<h2>What are some examples of reproducible reports</h2>
+<h2>What are some examples of reproducible reports?</h2>
 
 <ol>
 <li>Hu, Y. et. al. Late Middle Pleistocene Levallois stone-tool technology in
