Update files and links

--- a/01-getting-started.html
+++ b/01-getting-started.html
@@ -25,7 +25,7 @@
 
 <p>2 Hours</p>
 
-<hr />
+<hr>
 
 <h2>Learning Objectives</h2>
 
@@ -38,7 +38,7 @@
 <li>Render a provided reproducible report to multiple outputs using Rstudio, <code>Rmarkdown</code>, and the <code>knitr</code> package</li>
 </ul>
 
-<hr />
+<hr>
 
 <h2>Introductions</h2>
 
@@ -54,7 +54,7 @@
 
 <p>Automation or transformation: has the research paper changed much in the last 350 years (or why static PDFs are an underwhelming use of today&rsquo;s technology)</p>
 
-<p><img src="img/RSjournal.jpeg" alt="Maxwell's discovery of the electromagnetic properties of light" /></p>
+<p><img src="img/RSjournal.jpeg" alt="Maxwell&rsquo;s discovery of the electromagnetic properties of light" /></p>
 
 <p>Original manuscript of James Clerk Maxwell&rsquo;s paper on &lsquo;A dynamical theory of the electromagnetic field&rsquo; published in the oldest scientific journal, <em>Philosophical Transactions</em>, in 1685. According to the publisher, the Royal Society:</p>
 
@@ -164,7 +164,7 @@ right panel.  The file view in RStudio is just like
 navigating in finder or windows explorer.  Let&rsquo;s find the <code>FSCI-2019-files</code>
 folder we downloaded above.  Go to Desktop and <code>FSCI-2019-files</code>. You&rsquo;ll see
 lots of files we&rsquo;ll use during the workshop.  Double click on
-<code>Base_2013_day1_in.Rmd</code>.</p>
+<code>Base_2013_1.Rmd</code>.</p>
 
 <p>You&rsquo;ll see the document open in a new panel on the left hand side of the
 screen.  This is an editor window, and you can change things in the document
