--- a/instructor-notes.html
+++ b/instructor-notes.html
@@ -21,14 +21,6 @@
 </nav>
 
 <section>
-<hr />
-
-<p>layout: lesson
-root: .
-title: Working with Open Refine</p>
-
-<h2>minutes:</h2>
-
 <h1>Learning Objectives</h1>
 
 <ul>
@@ -48,7 +40,7 @@ title: Working with Open Refine</p>
 </ul></li>
 </ul>
 
-<hr />
+<hr>
 
 <h1>Lesson</h1>
 
@@ -97,7 +89,7 @@ title: Working with Open Refine</p>
 
 <h2>Cluster</h2>
 
-<p>One of the most magical bits of Refine, the moment you realize what you&rsquo;ve been missing. Refin<br />
+<p>One of the most magical bits of Refine, the moment you realize what you&rsquo;ve been missing. Refin<br>
 e has several clustering algorithms built in. Experiment with them, and learn more about these algorithms and how they work.</p>
 
 <p><a href="https://github.com/OpenRefine/OpenRefine/wiki/Clustering-In-Depth">More on clustering</a></p>
