--- a/TEMPLATE.html
+++ b/TEMPLATE.html
@@ -45,7 +45,7 @@ Fork instead.</p>
 <li>Download and install mkpage from <a href="https://github.com/caltechlibrary/mkpage">https://github.com/caltechlibrary/mkpage</a></li>
 <li>Clone a copy of the repository to your local machine.  You can use the GitHub
 Desktop application or the command line command using
-&lsquo;git clone <a href="https://github.com/AuthorCarpentry/lesson-name'">https://github.com/AuthorCarpentry/lesson-name'</a></li>
+&lsquo;git clone <a href="https://github.com/AuthorCarpentry/lesson-name'">https://github.com/AuthorCarpentry/lesson-name&rsquo;</a></li>
 </ul>
 
 <p>Add Content</p>
@@ -63,7 +63,8 @@ Desktop application or the command line command using
 <ul>
 <li>In your terminal, type ./mk-website.bash to generate .html files</li>
 <li>To preview the lesson, type ws and point your web browser to
-<a href="http://localhost:8000/">http://localhost:8000/</a>.<br /></li>
+<a href="http://localhost:8000/">http://localhost:8000/</a>.<br>
+</li>
 <li>When you&rsquo;re happy with the lesson, type ./publish_website.bash to send</li>
 <li>changes to
 github (script does a git commit and git push)</li>
