--- a/index.html
+++ b/index.html
@@ -21,40 +21,57 @@
 </nav>
 
 <section>
-<h1>Author Carpentry at FSCI 2019: Reproducible Research Reporting and Dynamic Documents with Open Authoring Tools: Toward the Paper of the Future</h1>
+<p>Author Carpentry at FSCI 2019: Reproducible Research Reporting and Dynamic Documents with Open Authoring Tools: Toward the Paper of the Future
+=======
 
-<p><em>Instructors: Tom Morrell, Donna Wrublewski</em></p>
+<em>Instructors: Tom Morrell, Donna Wrublewski</em>
 
-<p><strong>Lesson status: In Development</strong></p>
+<strong>Lesson status: In Development</strong>
+</p>
 
-<h2>What you will learn:</h2>
+<h2>What you will learn:</h2>
 
 <ul>
-<li>Identify the features of a reproducible and dynamic research communication (Paper of the Future) that is fit to enter the scholarly record.</li>
-<li>Recognize at least three models of “Future Papers” now in publication.</li>
-<li>Describe the benefits of composing research reports with open authoring tools.</li>
-<li>Apply a text-based workflow for creating a paper that combines dynamic text, code and software.</li>
-<li>Demonstrate an open-source workflow for automatically converting openly authored documents for publication, online posting and professional presentation.</li>
-<li>Demonstrate use of the RStudio GUI platform for authoring and producing professional-quality research reports.</li>
+<li><p>Identify the features of a reproducible and dynamic research communication (Paper of the Future) that is fit to enter the scholarly record.</p></li>
+
+<li><p>Recognize at least three models of “Future Papers” now in publication.</p></li>
+
+<li><p>Describe the benefits of composing research reports with open authoring tools.</p></li>
+
+<li><p>Apply a text-based workflow for creating a paper that combines dynamic text, code and software.</p></li>
+
+<li><p>Demonstrate an open-source workflow for automatically converting openly authored documents for publication, online posting and professional presentation.</p></li>
+
+<li><p>Demonstrate use of the RStudio GUI platform for authoring and producing professional-quality research reports.
+</p>
+
+<h2>Topics:</h2>
+
+<p></p></li>
 </ul>
 
-<h2>Topics:</h2>
-
 <ol>
-<li><a href="01-getting-started.html">Day 1: Introduction</a></li>
-<li><a href="02-markdown.html">Day 2: Basic Markdown</a></li>
-<li><a href="03-dynamic.html">Day 3: Dynamic Documents</a></li>
-<li><a href="04-publishing.html">Day 4: Publishing</a></li>
-</ol>
+<li><p><a href="01-getting-started.html">Day 1: Introduction</a></p></li>
 
-<h2>Requirements</h2>
+<li><p><a href="02-markdown.html">Day 2: Basic Markdown</a></p></li>
 
-<p>Author Carpentry&rsquo;s teaching is hands-on, so participants are encouraged to use
+<li><p><a href="03-dynamic.html">Day 3: Dynamic Documents</a></p></li>
+
+<li><p><a href="04-publishing.html">Day 4: Publishing</a>
+</p>
+
+<h2>Requirements</h2>
+
+<p>
+Author Carpentry&rsquo;s teaching is hands-on, so participants are encouraged to use
 their own computers to insure the proper setup of tools for an efficient
 workflow.
 <em>These lessons assume no prior knowledge of the skills or tools</em>, but working
 through this lesson requires working copies of R and Rstudio.
-We&rsquo;ll work through any software installation problems during the first day.</p>
+We&rsquo;ll work through any software installation problems during the first day. 
+
+               </p></li>
+</ol>
 
 </section>
 
