--- a/index.html
+++ b/index.html
@@ -21,43 +21,32 @@
 </nav>
 
 <section>
-<p>Author Carpentry at FSCI 2019: Reproducible Research Reporting and Dynamic Documents with Open Authoring Tools: Toward the Paper of the Future
-=======
+<h1>Author Carpentry at FSCI 2019: Reproducible Research Reporting and Dynamic Documents with Open Authoring Tools: Toward the Paper of the Future</h1>
 
+<p>
 <em>Instructors: Tom Morrell, Donna Wrublewski</em>
 
-<strong>Lesson status: In Development</strong>
+This is text <strong>Lesson status: In Development</strong> test.
 </p>
 
 <h2>What you will learn:</h2>
 
-<ul>
-<li><p>Identify the features of a reproducible and dynamic research communication (Paper of the Future) that is fit to enter the scholarly record.</p></li>
-
-<li><p>Recognize at least three models of “Future Papers” now in publication.</p></li>
-
-<li><p>Describe the benefits of composing research reports with open authoring tools.</p></li>
-
-<li><p>Apply a text-based workflow for creating a paper that combines dynamic text, code and software.</p></li>
-
-<li><p>Demonstrate an open-source workflow for automatically converting openly authored documents for publication, online posting and professional presentation.</p></li>
-
-<li><p>Demonstrate use of the RStudio GUI platform for authoring and producing professional-quality research reports.
+<p>
+-   Identify the features of a reproducible and dynamic research communication (Paper of the Future) that is fit to enter the scholarly record.
+-   Recognize at least three models of “Future Papers” now in publication.
+-   Describe the benefits of composing research reports with open authoring tools.
+-   Apply a text-based workflow for creating a paper that combines dynamic text, code and software.
+-   Demonstrate an open-source workflow for automatically converting openly authored documents for publication, online posting and professional presentation.
+-   Demonstrate use of the RStudio GUI platform for authoring and producing professional-quality research reports.
 </p>
 
 <h2>Topics:</h2>
 
-<p></p></li>
-</ul>
-
-<ol>
-<li><p><a href="01-getting-started.html">Day 1: Introduction</a></p></li>
-
-<li><p><a href="02-markdown.html">Day 2: Basic Markdown</a></p></li>
-
-<li><p><a href="03-dynamic.html">Day 3: Dynamic Documents</a></p></li>
-
-<li><p><a href="04-publishing.html">Day 4: Publishing</a>
+<p>
+1.  <a href="01-getting-started.html">Day 1: Introduction</a>
+2.  <a href="02-markdown.html">Day 2: Basic Markdown</a>
+4.  <a href="03-dynamic.html">Day 3: Dynamic Documents</a>
+5.  <a href="04-publishing.html">Day 4: Publishing</a>
 </p>
 
 <h2>Requirements</h2>
@@ -68,10 +57,7 @@ their own computers to insure the proper setup of tools for an efficient
 workflow.
 <em>These lessons assume no prior knowledge of the skills or tools</em>, but working
 through this lesson requires working copies of R and Rstudio.
-We&rsquo;ll work through any software installation problems during the first day. 
-
-               </p></li>
-</ol>
+We&rsquo;ll work through any software installation problems during the first day.</p>
 
 </section>
 
