--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
 </nav>
 
 <section>
-<h1>Author Carpentry at FSCI 2019: Reproducible Research Reporting and Dynamic Documents with Open Authoring Tools: Toward the Paper of the Future</h1>
+<h1>Author Carpentry at FSCI 2019: Writing a Research Compendium and the Future of Scientific Reporting</h1>
 
 <p><em>Instructors: Tom Morrell, Donna Wrublewski</em></p>
 
-<p>This is text <strong>Lesson status: In Development</strong> test.</p>
+<p><strong>Lesson status: In Development</strong></p>
 
 <h2>What you will learn:</h2>
 
