--- a/01-getting-started.html
+++ b/01-getting-started.html
@@ -89,8 +89,9 @@ elevated c-Myc <em>eLife</em> 2018; 7:e30274 DOI
 <a href="https://doi.org/10.7554/eLife.30274">10.7554/eLife.30274</a></li>
 </ol>
 
-<p><a href="https://zenodo.org/communities/research-compendium/">Zenodo collection</a>
-<a href="https://research-compendium.science/">Research compendium setup</a></p>
+<p><a href="https://zenodo.org/communities/research-compendium/">Zenodo collection</a></p>
+
+<p><a href="https://research-compendium.science/">Research compendium setup</a></p>
 
 <h2>How can authors fulfill these requirements while making their research reports more Findable, Accessible, Interoperable, and Re-Useable/Reproducible?</h2>
 
