--- a/index.html
+++ b/index.html
@@ -38,6 +38,8 @@
 <li>Demonstrate use of the RStudio GUI platform for authoring and producing professional-quality research reports.</li>
 </ul>
 
+<p><a href="https://docs.google.com/document/d/1KF2i1L2Dx-gPoac4GHaLa0TwrmZ4PxGDTzFhY-SwvE0">Full Syllabus</a></p>
+
 <h2>Topics:</h2>
 
 <ol>
