--- a/02-markdown.html
+++ b/02-markdown.html
@@ -25,7 +25,7 @@
 
 <p>3 hours</p>
 
-<hr>
+<hr />
 
 <h2>Learning Objectives</h2>
 
@@ -42,7 +42,7 @@
 <li>Include equations in your document</li>
 </ul>
 
-<hr>
+<hr />
 
 <h2>Anatomy of an Rmarkdown Reproducible Report</h2>
 
@@ -68,7 +68,7 @@ subfolder and open the exercise file <code>Base_2013_2.Rmd</code>. Immediately s
 
 <p><strong>YAML Header</strong></p>
 
-<p>In the <code>author</code> field, enter your own Name and Institution with the entire string of text surrounded by quotes<br>
+<p>In the <code>author</code> field, enter your own Name and Institution with the entire string of text surrounded by quotes<br />
 In the <code>date</code> field, enter today&rsquo;s date</p>
 
 <p><strong>Text Document</strong></p>
@@ -130,7 +130,7 @@ address in round parentheses ().  (TIP: Make sure there is no space between the 
 <li><p>You did alot of work! Save the file and knit it to both HTML and Word. Compare the results to see if anything changes based on output file format.</p></li>
 </ol>
 
-<hr>
+<hr />
 
 <h2>Document Sections</h2>
 
