--- a/CONTRIBUTING.html
+++ b/CONTRIBUTING.html
@@ -56,7 +56,7 @@ be viewed independent from a web connection.</p>
 
 <li><p>Clone the repository to your local computer by using the &ldquo;Clone&rdquo;
 link at the top left corner of the repository page.  In a local
-terminal window type &lsquo;git clone <em>link</em>&rsquo;</p></li>
+terminal window type &lsquo;git clone <em>link</em>&lsquo;</p></li>
 
 <li><p>Make your changes to the .md files using your favorite text editor.</p></li>
 
@@ -67,7 +67,7 @@ terminal window type &lsquo;git clone <em>link</em>&rsquo;</p></li>
 <li><p>Upload your changes to your GitHub account by typing ./publish.bash (Does a
 git commit and push)</p></li>
 
-<li><p>On the your GitHub repository site &lsquo;<a href="https://github.com/username/lesson-name'">https://github.com/username/lesson-name&rsquo;</a> add a new branch by using the branch
+<li><p>On the your GitHub repository site &lsquo;<a href="https://github.com/username/lesson-name'">https://github.com/username/lesson-name'</a> add a new branch by using the branch
 dropdown.  Choose something that describes the changes you&rsquo;ve made like <code>fixing-typos-in-shell-lesson</code>
 or <code>adding-tutorial-on-visualization</code>.</p></li>
 
